<resources>
    <string name="app_name">Github</string>
    <string name="searchbar_hint">Masukkan kata</string>
    <string name="this_activity">Ini adalah menu activity</string>
    <string name="username">username</string>
    <string name="name">name</string>
    <string name="tab1">Follower</string>
    <string name="tab2">Following</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="tab">Tab</string>
    <string name="vp">ViewPager</string>
    <string name="btn_setting">setting</string>
    <string name="btn_fav">favorite</string>
    <string name="search_name">search_name</string>
    <string name="follower">follower</string>
    <string name="following">following</string>
    <string name="followingNum">%d\n following</string>
    <string name="followerNum">%d\n follower</string>
    <string name="profile_URL">Profile URL</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="brightness_icon_description">Icon representing brightness</string>
    <string name="night_icon_description">Icon representing night mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet">no_internet</string>

</resources>