<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailActivity"
    android:orientation="vertical"
    android:id="@+id/data_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="top"
            android:paddingBottom="20dp"
            android:visibility="visible">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.155"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/details_tv_username"
                style="@style/TextContent.TitleMedium.Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@id/profile_image"
                android:text="@string/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/profile_image"
                app:layout_constraintTop_toTopOf="@+id/profile_image" />

            <TextView
                android:id="@+id/details_tv_name"
                style="@style/TextContent.TitleMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@id/profile_image"
                android:text="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/profile_image"
                app:layout_constraintTop_toTopOf="@+id/profile_image" />

            <TextView
                android:id="@+id/details_tv_follower"
                style="@style/TextContent.Details"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="68dp"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/details_tv_following"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_tv_name"
                app:layout_constraintVertical_bias="0.775"
                tools:text="@string/followerNum" />

            <TextView
                android:id="@+id/details_tv_following"
                style="@style/TextContent.Details"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/details_tv_follower"
                app:layout_constraintEnd_toEndOf="@+id/iv_bookmark"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/details_tv_follower"
                app:layout_constraintTop_toTopOf="@+id/details_tv_follower"
                tools:text="@string/followingNum" />

            <ImageView
                android:id="@+id/iv_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/baseline_favorite_border_24"
                app:layout_constraintBottom_toBottomOf="@+id/details_tv_following"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/details_tv_following"
                app:layout_constraintTop_toTopOf="@+id/details_tv_following" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSecondaryVariant"
            app:tabTextColor="@android:color/white"
            android:contentDescription="@string/tab"
            app:tabIndicatorColor="@color/white"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/vp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </LinearLayout>

</ScrollView>